--- a/src/NormeVenit.Web/index.html
+++ b/src/NormeVenit.Web/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Coduri CAEN | România</title>
-		<meta name="description" content="Codurile CAEN din România" />
+		<meta name="description" content="Norme venit din România" />
 		<meta name="author" content="Florin Bobiș" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="css/main.css" />
@@ -14,7 +14,7 @@
 	</head>
 	<body>
         <main>
-            <p class="main-header">Coduri CAEN</p>
+            <p class="main-header">Normele de venit CAEN</p>
             <p>În curând</p>
         </main>
 	</body>
